welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:5: error: type mismatch;
 found   : Unit
 required: Int
  for ((n, i) <- nums.zipWithIndex){
              ^